# cinematica-industrial

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: relatorio.md
src/: animation.cpp  animation.h  camera3d.cpp  camera3d.h  main.cpp  manipulator.h  renderer3d.cpp  renderer3d.h
src/manipulators/: cartesian.cpp  cartesian.h  polar.cpp  polar.h
